--- a/Personal_Website.html
+++ b/Personal_Website.html
@@ -4,13 +4,13 @@
 <head>
   <title>Kelly Rogers
   </title>
-<!-- Custom CSS -->
-  <link href="stylesheet.css" rel="stylesheet">
-<!-- Custom Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" type="text/css">
 <!--Bootstrap CSS for Image Gallery-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Custom Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="stylesheet.css" rel="stylesheet">
 </head>
 
 <body>
@@ -79,16 +79,16 @@
       </h3>
 
         <div class="container">
-          <div class="row col-md-6">
-            <img class="inner-image" src="Image1.png">
-            <img class="inner-image" src="Image4.png">
-            <img class="inner-image" src="Image2.png">
-            <img class="inner-image" src="Image3.png">
-            <img class="inner-image" src="Image5.png">
-            <img class="inner-image" src="Image6.png">
+          <div class="row">
+               <div class="col-md-4"><img class="inner-image" src="Image1.png"></div>
+               <div class="col-md-4"><img class="inner-image" src="Image4.png"></div>
+               <div class="col-md-4"><img class="inner-image" src="Image2.png"></div>
           </div>
-          <div class="row col-md-6">
 
+          <div class="row">
+             <div class="col-md-4"><img class="inner-image" src="Image3.png"></div>
+             <div class="col-md-4"><img class="inner-image" src="Image5.png"></div>
+             <div class="col-md-4"><img class="inner-image" src="Image6.png"></div>
           </div>
       </div>
     </div>
