added images to second page

--- a/Personal_Website.html
+++ b/Personal_Website.html
@@ -23,6 +23,7 @@
           <li><a href="#Skills">Skills</a></li>
           <li><a href="#Social">Social</a></li>
           <li><a href="#Copywriting">Copywriting</a></li>
+          <li><a href="page2.html">Interests</a></li>
         </strong>
       </ul>
     </div>
