--- a/page2.html
+++ b/page2.html
@@ -13,17 +13,56 @@
   <link href="stylesheet.css" rel="stylesheet">
 </head>
 
-<body>
   <!--Navigation-->
   <nav class="navbar-fixed-top">
     <div class="container-topnav">
       <ul class="topnav">
         <strong>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Skills">Skills</a></li>
-          <li><a href="#Social">Social</a></li>
-          <li><a href="#Copywriting">Copywriting</a></li>
+          <li><a href="Personal_Website.html">About</a></li>
+          <li><a href="Personal_Website.html">Skills</a></li>
+          <li><a href="Personal_Website.html">Social</a></li>
+          <li><a href="Personal_Website.html">Copywriting</a></li>
+          <li><a href="Personal_Website.html">Interests</a></li>
         </strong>
       </ul>
     </div>
   </nav>
+
+<body>
+
+<div class ="Food_Background">
+  <div class="Food">
+    <h2><strong>Food</strong></h2>
+        <img src= "bagel.jpg">
+      <p> Food. I love food. All kinds of it. <br>Especially anything with a good 'ol avocado on it.</br></p>
+      <p> Here's one of my favorite bagels in the city:<br>A whole wheat everything with cream cheese, avocado, and tomato.</br></p>
+      <p>YUM.</p>
+  </div>
+</div>
+
+<div class="Activities_Background">
+  <div class="Activities">
+    <h2><strong>Outdoor Activities</strong></h2>
+    <img src= "kayak.jpg">
+    <p>Whether it's kayaking, running, or camping, I'm a big fan of the outdoors<br> What can I say? It's the midwesterner in me.</br></p>
+  </div>
+</div>
+
+<div class = "content-section-d" id="Social">
+  <img src="move.png"style="width:20px;height:20px;" align= "middle">
+     <h3>
+       <strong>Follow Me</strong>
+     </h3>
+     <p>
+     </p>
+          <a href= "https://twitter.com/Kell_RogerThat">
+            <img src="twitter2.png"style="width:30px;height:30px;" align= "middle">
+          </a>
+          <a href= "https://www.linkedin.com/in/kelly-rogers-6ab7774b">
+            <img src="linkedin2.png"style="width:30px;height:30px;" align= "middle">
+          </a>
+</div>
+
+
+</body>
+</html>
