--- a/index.html
+++ b/index.html
@@ -110,5 +110,15 @@
                 </a>
       </div>
 
+<!--Contact-->
+
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname">
+</form>
+  <input type="button">Submit
+
 
 </body>
