--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
                     first_name: "Kelly",
                      last_name: "Rogers",
                      lead_score: "5",
-                     role: "Manager"
+                     role: "Manager",
+                     industry: "Technology",
   }
                    );
-  analytics.track('Page Viewed');
+  analytics.track('Product Viewed');
   }}();
 </script>
 <head>
