--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ window.adobe=window.adobe||{},window.adobe.target=function(){"use strict";var t=
               <p>When I'm not working, you can find me cheering on my Buckeyes, running, and most definitely eating. </p>
       </div>
   
+	<script>
    analytics.identify(342352452,{
                     first_name: "Kelly",
                      last_name: "Rogers",
@@ -100,6 +101,7 @@ window.adobe=window.adobe||{},window.adobe.target=function(){"use strict";var t=
                      industry: "Technology",
   }
                    );
+	</script>
 
 <!--Skills-->
       <div class= "content-section-b" id="Skills">
